syntax = "proto3";

package topos.uci.v1;

import "topos/shared/v1/certificate.proto";
import "topos/shared/v1/frost.proto";
import "topos/shared/v1/stark_proof.proto";
import "topos/shared/v1/subnet.proto";

// Certificate - main exchange item
message Certificate {
  topos.shared.v1.CertificateId prev_id = 1;
  topos.shared.v1.SubnetId source_subnet_id = 2;
  bytes state_root = 3;
  bytes tx_root_hash = 4;
  bytes receipts_root_hash = 5;
  repeated topos.shared.v1.SubnetId target_subnets = 6;
  uint32 verifier = 7;
  topos.shared.v1.CertificateId id = 8;
  topos.shared.v1.StarkProof proof = 9;
  topos.shared.v1.Frost signature = 10;
}


message OptionalCertificate {
  Certificate value = 1;
}
